<resources>
    <string name="app_name">Chequea la verdad</string>
    <string name="title_home">Aprende</string>
    <string name="title_dashboard">Identifica</string>
    <string name="title_notifications">Info</string>
    <string name="button_billete">Billete</string>
    <string name="button_money">Moneda</string>
    <string name="button_institucion">Institucion</string>
    <string name="button_ley">Ley</string>
    <string name="title_settings">Configuración</string>
    <string name="button_language">Idioma</string>
    <string name="button_pfrecuentes">Preg. Frecuentes</string>
    <string name="button_contactanos">Contactanos</string>
    <string name="seleccione_billetes">Seleccione Billetes</string>
    <string-array name="billetes_arrays">
        <item>20</item>
        <item>100</item>

    </string-array>
    <string name="terminosyc">Term. y Condic.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bienvenido</string>
</resources>