<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoUser">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/billetesinfo"
            android:layout_centerHorizontal="true"
            android:text="@string/button_billete"
            android:layout_marginTop="50dp"
            android:drawablePadding="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/moneyinfo"
            android:layout_centerHorizontal="true"
            android:text="@string/button_money"
            android:layout_marginTop="150dp"
            android:drawablePadding="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/intitution"
            android:layout_centerHorizontal="true"
            android:text="@string/button_institucion"
            android:layout_marginTop="250dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ley"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:drawablePadding="50dp"
            android:text="@string/button_ley"/>

    </RelativeLayout>

</FrameLayout>